# 3DEngine

./: .buildconfig  .gitignore  3D.kdev4  3D.pro  3D.pro.user.2680dbf  3Dengine.creator.user.ffdb933  3Dengine.files  3Dengine.includes  README.md  brick.ppm.REMOVED.git-id  brick_normal.ppm.REMOVED.git-id  camera.cpp  camera.h  canvas.cpp  canvas.h  engine  line_texture.ppm  main.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  meson.build  normal.mp4.REMOVED.git-id  normal.ppm  normal_2.ppm  out.ppm  out.ppm.REMOVED.git-id  output.mkv  pic.ppm.REMOVED.git-id  point2d.cpp  point2d.h  point3d.cpp  point3d.h  rasteriser.cpp  rasteriser.h  renderengine.cpp  renderengine.h  screen.ppm.REMOVED.git-id  star_texture.ppm  (+7 more)
..bfg-report/2021-04-16/15-52-52/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2021-04-16/15-53-31/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.kdev4/: 3D.kdev4
mesh_examples/: bitxo2.obj.REMOVED.git-id  car.obj.REMOVED.git-id  car2.obj.REMOVED.git-id
src/: main.cpp
src/auxiliar/: multithreadmanager.cpp  multithreadmanager.h  objparser.cpp  objparser.h
src/engine/: camera.cpp  camera.h  matrix.cpp  matrix.h  multithreadmanager.cpp  multithreadmanager.h  objparser.cpp  objparser.h  point2d.h  point3d.cpp  point3d.h  projector.cpp  projector.h  rasteriser.cpp  rasteriser.cpp.ksuwuI  rasteriser.h  rasteriserflat.cpp  rasteriserflat.h  rasteriserinterpolatedvertex.cpp  rasteriserinterpolatedvertex.h  rasteriserwireframe.cpp  rasteriserwireframe.h  renderengine.cpp  renderengine.h  triangle.cpp  triangle.h  world.cpp  world.h
src/engine/buffers/: commonbuffers.cpp  commonbuffers.h
src/engine/fragment/: flatnormals.cpp  flatnormals.h  fragmentshader.cpp  fragmentshader.h  lightness.cpp  lightness.h  normalmapping.cpp  normalmapping.h  normals.cpp  normals.h  shadowlesslightning.cpp  shadowlesslightning.h  smoothnormals.cpp  smoothnormals.h  tags.jFKvAz  texturepainter.cpp  (+2 more)
src/frontends/: framebufferhandler.cpp  framebufferhandler.h
src/frontends/Gtk+/src/: canvas.cpp  canvas.h  engine3d-window.cpp  engine3d-window.h  engine3d-window.ui  engine3d.gresource.xml  main.cpp  meson.build  renderengine.cpp  renderengine.h
(+195 files in other folders)
